services/ele/jwt-auth/base/peer-auths.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: jwt-request-auth
spec:
  selector:
    matchLabels:
      auth: required
  jwtRules:
    - issuer: "https://cognito-idp.ap-northeast-1.amazonaws.com/ap-northeast-1_OlP3TVnbI"
      jwksUri: "https://cognito-idp.ap-northeast-1.amazonaws.com/ap-northeast-1_OlP3TVnbI/.well-known/jwks.json"
      forwardOriginalToken: true

---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: jwt-auth-policy-allow-options
spec:
  selector:
    matchLabels:
      auth: required
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["OPTIONS"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: jwt-auth-policy-allow-requests
spec:
  selector:
    matchLabels:
      auth: required
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
